--- a/JS/index.html
+++ b/JS/index.html
@@ -7,7 +7,23 @@
     <title>Document</title>
   </head>
   <body>
+    <ul>
+      <li>First item</li>
+      <li>Second item</li>
+      <li>Third item</li>
+      <li>Fourth item</li>
+      <li>Fifth item</li>
+    </ul>
+
+    <ul id="menu" class="menu">
+      <li class="menu-item">home</li>
+      <li class="menu-item">about</li>
+      <li class="menu-item">gallery</li>
+      <li>blog</li>
+    </ul>
+
     <script src="./script.js"></script>
     <script src="./second.js"></script>
+    <script src="./third.js"></script>
   </body>
 </html>
