--- a/JS/index.html
+++ b/JS/index.html
@@ -25,5 +25,6 @@
     <script src="./script.js"></script>
     <script src="./second.js"></script>
     <script src="./third.js"></script>
+    <script src="./vierde.js"></script>
   </body>
 </html>
