--- a/photo-gallery.html
+++ b/photo-gallery.html
@@ -1,4 +1,4 @@
-<header class="header">
+<!-- <header class="header">
   <div class="container">
     <nav class="nav-header">
       <ul class="nav-list">
@@ -87,4 +87,4 @@
       </li>
     </ul>
   </div>
-</header>
+</header> -->
